--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Marck+Script&family=Sacramento&display=swap");
 
 html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -ms-overflow-style: scrollbar;
   -webkit-tap-highlight-color: transparent;
 }
 
 body {
-  padding: 0;
   margin: 0;
-  font-family: "Trebuchet MS", sans-serif;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
   background-color: #fff;
-  scroll-behavior: smooth;
 }
 
 header {
@@ -19,15 +29,15 @@ header {
 }
 
 .color1 {
-  color: #429ebe;
+  color: #2abce7;
 }
 
 .color2 {
-  color: #dfc939;
+  color: #eed11e;
 }
 
 .color3 {
-  color: #42bea0;
+  color: #46d5a5;
 }
 .logo {
   text-transform: capitalize;
@@ -39,30 +49,31 @@ header {
 }
 .I {
   color: #fff;
-  background-color: #42bea0;
+  background-color: #2abce7;
   text-align: center;
-  line-height: 5px;
 
   padding: 0px 10px;
 }
 .right {
-  padding: 1em;
   float: right;
 }
 .left {
-  padding: 1em;
   float: left;
+}
+
+.padding {
+  padding: 1em;
 }
 .btn {
   height: 40px;
   padding-left: 40px;
   padding-right: 40px;
   color: white;
-  background: #42bea0;
+  background: #46d5a5;
   border: none;
-  border: 1px solid #42bea0;
+  border: 1px solid #7cd57c;
   cursor: pointer;
-  margin-right: 5px;
+  margin-right: 10px;
   font-weight: bold;
   text-transform: uppercase;
   font-family: "Trebuchet MS", sans-serif;
@@ -74,10 +85,10 @@ header {
   height: 40px;
   padding-left: 40px;
   padding-right: 40px;
-  color: #429ebe;
+  color: #2abce7;
   border: none;
   background: #fff;
-  border: 1px solid #429ebe;
+  border: 1px solid #2abce7;
   cursor: pointer;
   margin-right: 5px;
   text-transform: uppercase;
@@ -89,15 +100,23 @@ header {
 }
 
 .half {
-  width: 45%;
+  width: 50%;
   height: auto;
   float: left;
 }
 .svg1 {
   align-self: center;
   width: 65%;
-  margin-left: 30%;
+  margin-left: 15%;
   margin-top: 10vh;
+}
+
+.svg2 {
+  align-self: center;
+  width: 50%;
+  margin-left: 40%;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
 }
 
 .center {
@@ -119,26 +138,44 @@ header {
   margin-left: 25px;
 }
 .detail {
-  line-height: 1.2em;
   padding: 15px;
+}
+
+.detail-about {
+  padding: 0;
 }
 
 .detail-wrap {
   width: 75%;
   margin-left: 35%;
-  margin-top: 20vh;
+  margin-top: 12vh;
 }
 
 .squircle {
   z-index: -1;
   position: absolute;
-  width: 300px;
+  width: 150px;
   height: 300px;
   -ms-transform: rotate(15); /* IE 9 */
   transform: rotate(-35deg);
-  margin-top: 40vh;
-  margin-left: -10%;
-  background-color: #429ebe;
+  top: 0;
+  /* margin-top: 30vh; */
+  margin-left: -5%;
+  background-color: #eed11e;
+}
+
+.squircle2 {
+  z-index: -1;
+  position: absolute;
+  width: 150px;
+  height: 300px;
+  -ms-transform: rotate(15); /* IE 9 */
+  transform: rotate(-35deg);
+  top: 20vh;
+  opacity: 0.9;
+  /* margin-top: 30vh; */
+  margin-left: -5%;
+  background-color: #46d5a5;
 }
 
 ::-webkit-scrollbar-track {
@@ -154,4 +191,195 @@ header {
 ::-webkit-scrollbar-thumb {
   background-color: #a8a8a8;
   border: 2px solid #a8a8a8;
+}
+
+.welcome {
+  width: 100%;
+  height: auto;
+  float: left;
+}
+
+/* about us */
+
+.about-us {
+  width: 100%;
+  height: auto;
+  float: left;
+  margin-top: 10vh;
+}
+
+.right-about {
+  width: 70%;
+  margin: 0 auto;
+  padding: 30px;
+}
+.how-header {
+  font-size: 2em;
+  text-transform: uppercase;
+  font-weight: 900;
+  text-align: center;
+}
+
+/* footer */
+
+footer {
+  background-color: #46d5a5;
+  height: auto;
+  width: 100%;
+  float: left;
+  color: white;
+}
+
+footer p {
+  margin-top: 50px;
+}
+
+.fa {
+  margin-right: 20px;
+}
+
+.social-fa {
+  float: left;
+  margin-left: 10px;
+  cursor: pointer;
+}
+.social-fa:hover {
+  color: #164a6d;
+}
+
+.contact-us {
+  width: 100%;
+  height: auto;
+  float: left;
+  background-color: #f5f5f5;
+  margin-top: 5vh;
+}
+
+/*form styles*/
+
+.left-contact {
+  max-width: 50%;
+  margin-left: 40%;
+  border-radius: 2px;
+  margin-top: 15vh;
+  font-family: "Trebuchet MS", sans-serif;
+  margin-bottom: 15vh;
+}
+
+.svg3 {
+  align-self: center;
+  width: 65%;
+  margin-left: 5%;
+  margin-top: 12vh;
+  margin-bottom: 15vh;
+}
+
+.contact-header {
+  font-size: 3em;
+  font-weight: 300;
+}
+.about-header {
+  font-size: 3em;
+  font-weight: 300;
+  padding: 0;
+  margin: 0;
+  margin-top: -8vh;
+}
+
+.address {
+  line-height: 10px;
+  padding: 0;
+}
+
+/* how it works */
+
+.how-it-works {
+  width: 100%;
+  float: left;
+  margin-top: 10vh;
+  background-color: #fafafa;
+}
+
+.how-it-works .wrap {
+  /* padding: 10px; */
+  width: 60%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.sub-head {
+  font-size: 2em;
+  font-weight: 200;
+  text-transform: uppercase;
+  padding: 0;
+  margin: 0;
+}
+.items {
+  margin-left: 10px;
+}
+.item-number {
+  background-color: #46d5a5;
+  padding: 8px;
+  color: white;
+  border-radius: 5px;
+  margin-right: 10px;
+  font-weight: bold;
+  float: left;
+}
+.title {
+  font-size: 1.1em;
+  font-weight: 500;
+}
+
+/* team */
+.team {
+  float: left;
+}
+
+/* squares */
+
+.sqr {
+  position: relative;
+  overflow: hidden;
+  width: 4.2em;
+  height: 4.2em;
+  margin-right: 7px;
+  border-radius: 50%;
+  border: none;
+  background-color: #7cd57c;
+  color: white;
+  display: inline-block;
+  /* margin: 1em; */
+  /* cursor: pointer; 
+		cursor: hand; */
+}
+.sqr img {
+  width: auto;
+  height: 100%;
+}
+a {
+  color: white;
+}
+.cont-title {
+  text-transform: uppercase;
+  /* text-decoration: underline; */
+  font-weight: 500;
+}
+
+.sqr figcaption {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  text-align: center;
+  font-family: monospace, sans-serif;
+  font-size: 2.7em;
+  opacity: 0;
+  transition: all 0.1s;
+}
+
+.sqr:hover figcaption {
+  display: block;
+  opacity: 1;
+  bottom: 1rem;
 }
